--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# The Site Configuration
+ # The Site Configuration
 
 # Import the theme
 theme: jekyll-theme-chirpy
@@ -34,15 +34,15 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Sherif Monuir
+  email: Sherif.m.jamal@outlook.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://x.com/RyuzakiRyuga666 # change to your Twitter homepage
+    #- https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    # - https://www.facebook.com/CyAlarm
+    # - https://www.linkedin.com/in/smjaldin
 
 # Site Verification Settings
 webmaster_verifications:
