--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: 0x1CysDe # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: RyuzakiRyuga666# change to your Twitter username
 
 social:
   # Change to your full name.
@@ -38,11 +38,11 @@ social:
   email: Sherif.m.jamal@outlook.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://x.com/RyuzakiRyuga666 # change to your Twitter homepage
+    #- https://x.com/RyuzakiRyuga666 # change to your Twitter homepage
     #- https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/CyAlarm
-    # - https://www.linkedin.com/in/smjaldin
+     - https://www.facebook.com/CyAlarm
+     - https://www.linkedin.com/in/smjaldin
 
 # Site Verification Settings
 webmaster_verifications:
