--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Africa/Cairo
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 0x1CysDe Red Team Enginner
+title: Sherifmonuir Red Team Enginner
 
 tagline: My name is Sherif im working a cyber security 
 
